[package]
name = "must_be_empty"
version = "0.1.0"
edition = "2021"
description = "Makes sure that an specific function is empty. With no statements"

exclude = ["tests/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.107", features = ["visit", "full", "printing"]}
proc-macro-error = "1.0.4"
quote = "1.0"

[lib]
proc-macro = true

[features]
default = ["warn"]
only_on_release = []
warn = []

